--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript": "4.4.4",
     "vite": "2.6.13",
     "vite-plugin-html-env": "1.0.3",
+    "vite-plugin-mkcert": "^1.5.2",
     "vite-plugin-svg-icons": "1.0.5",
     "vue-eslint-parser": "8.0.0",
     "vue-tsc": "0.28.10",
