--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@vitejs/plugin-vue": "1.9.4",
     "@vue/compiler-sfc": "3.2.20",
     "@vue/test-utils": "2.0.0-rc.16",
-    "autoprefixer": "10.4.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-html": "6.2.0",
@@ -46,7 +46,7 @@
     "jest": "27.3.1",
     "jest-serializer-vue": "2.0.2",
     "jest-watch-typeahead": "1.0.0",
-    "postcss": "8.3.11",
+    "postcss": "^8.4.5",
     "postcss-html": "1.2.0",
     "prettier": "2.4.1",
     "rollup-plugin-visualizer": "5.5.2",
@@ -57,7 +57,7 @@
     "stylelint-config-recommended-vue": "1.0.0",
     "stylelint-config-standard": "23.0.0",
     "stylelint-order": "5.0.0",
-    "tailwindcss": "2.2.17",
+    "tailwindcss": "^3.0.1",
     "ts-jest": "27.0.7",
     "typescript": "4.4.4",
     "vite": "2.6.13",
