--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "i18n-ally.localesPaths": ["src/locales"],
-  "[vue]": { "editor.defaultFormatter": "johnsoncodehk.volar" }
+  "[vue]": {
+    "editor.defaultFormatter": "johnsoncodehk.volar"
+  },
+  "i18n-ally.keystyle": "nested"
 }
