--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "precommit": "yarn lint && yarn test && yarn build"
+    "precommit": "yarn lint && yarn test && yarn build",
+    "deploy": "yarn build && surge dist foamy-credit.surge.sh"
   },
   "dependencies": {
     "axios": "0.24.0",
@@ -25,10 +26,12 @@
     "normalize.css": "8.0.1",
     "qs": "6.10.1",
     "vue": "3.2.19",
+    "vue-i18n": "^9.2.0-beta.23",
     "vue-router": "4.0.12",
     "vuex": "4.0.2"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@types/jest": "27.0.2",
     "@types/js-cookie": "3.0.0",
     "@types/qs": "6.9.7",
@@ -50,6 +53,7 @@
     "postcss-html": "1.2.0",
     "prettier": "2.4.1",
     "rollup-plugin-visualizer": "5.5.2",
+    "sass": "^1.45.0",
     "stylelint": "14.0.1",
     "stylelint-config-html": "1.0.0",
     "stylelint-config-prettier": "9.0.3",
@@ -64,6 +68,7 @@
     "vite-plugin-html-env": "1.0.3",
     "vite-plugin-mkcert": "^1.5.2",
     "vite-plugin-svg-icons": "1.0.5",
+    "vite-svg-loader": "^3.1.1",
     "vue-eslint-parser": "8.0.0",
     "vue-tsc": "0.28.10",
     "vue3-jest": "27.0.0-alpha.2"
