feats: team and company pages done (only desctop)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
   "[vue]": {
     "editor.defaultFormatter": "johnsoncodehk.volar"
   },
-  "i18n-ally.keystyle": "nested"
+  "i18n-ally.keystyle": "nested",
+  "cSpell.words": [
+    "semibold"
+  ]
 }
