--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "0.24.0",
     "js-cookie": "3.0.1",
     "normalize.css": "8.0.1",
+    "nprogress": "^0.2.0",
     "qs": "6.10.1",
     "swiper": "^7.3.2",
     "vue": "3.2.19",
@@ -37,6 +38,7 @@
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@types/jest": "27.0.2",
     "@types/js-cookie": "3.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/qs": "6.9.7",
     "@types/swiper": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "5.2.0",
