--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-i18n": "^9.2.0-beta.23",
     "vue-router": "4.0.12",
     "vue-universal-modal": "^1.1.3",
+    "vue3-markdown-it": "^1.0.10",
     "vuex": "4.0.2"
   },
   "devDependencies": {
