--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "3.2.19",
     "vue-i18n": "^9.2.0-beta.23",
     "vue-router": "4.0.12",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue-universal-modal": "^1.1.3",
     "vue3-markdown-it": "^1.0.10",
     "vuex": "4.0.2"
